48.0 - Mar 17, 2025
===================

Changes since 48.alpha

  - Added/updated/fixed translations
  - Disable C compiler warnings from code generated by 'valac'

48.alpha - Jan 09, 2025
=======================

Changes since 47.0

  - Includ failed ISO download url in error message
  - Fix fullscreen button icon not updating when toggled
  - Fix focus-on-click focus steal in fullscreen button
  - Avoid GdkPixbuf critical when failing to create thumbnails
  - Added/updated/fixed translations

47.0 - Sep 17, 2024
===================

Changes since 47.beta

  - Add HW and brand colors info to metainfo file
  - Rename metainfo file to o.g.B.metainfo.xml.in
  - Don't consider distro derivatives when resolving logos
  - Added/updated/fixed translations

47.beta - Aug 14, 2024
======================

Changes since 46.1

  - Fix appdata validation for "Devel" build profile
  - Check when a libvirt-broker reference is invalid
  - Improve some print format specifiers
  - Add "Trisquel" logo
  - Various CI fixes
  - Added/updated/fixed translations

46.1 - Apr 22, 2024
===================

Changes since 46.0

  - Fix build with clang
  - Added/updated/fixed translations

46.0 - Mar 18, 2024
===================

Changes since 45.0

  - Disable "secure-boot" for EFI virtual machines
  - Use libportal to call Background Portal
  - Fallback to default resources on error cases
  - Fix crash when processing a non bootable ISO image
  - Fix permissions when copying template files
  - Added/updated/fixed translations

45.0 - Sep 18, 2023
===================

Changes since 45.rc

  - Fix crash in the flatpak detection code causing a crash when closing
  - Added/updated/fixed translations

45.rc - Sep 04, 2023
====================

Changes since 44.2

  - Mark Shell search-provider to not autostart
  - Report OS download errors to the user
  - Fix current-memory not being updated on RAM preference changes
  - Fix failure to create VMs when G_MESSAGES_DEBUG=all was set