@@ -58,55 +58,7 @@
     <control>touch</control>
   </supports>
   <releases>
-    <release version="48.0" date="2025-03-17" type="stable">
-      <description>
-        <p>This is a stable release with the following changes since 47.0.</p>
-        <ul>
-          <li>Fix appdata validation for "Devel" build profile</li>
-          <li>Check when a libvirt-broker reference is invalid</li>
-          <li>Improve some print format specifiers</li>
-          <li>Add "Trisquel" logo</li>
-          <li>Various CI fixes</li>
-          <li>Added/updated/fixed translations</li>
-        </ul>
-      </description>
-    </release>
-    <release version="47.0" date="2024-09-17" type="stable">
-      <description>
-        <p>This is a stable release with the following changes since 47.beta.</p>
-        <ul>
-          <li>Update metainfo/appstream metadata</li>
-          <li>Fix distro logos for derivative distros</li>
-          <li>Added/updated/fixed translations</li>
-        </ul>
-      </description>
-    </release>
-    <release version="46.1" date="2024-04-22" type="stable">
-      <description>
-        <p>This is the second stable release in the GNOME 46 series, with the
-        following improvements.</p>
-        <ul>
-          <li>Fix build with Clang</li>
-          <li>Added/updated/fixed translations</li>
-        </ul>
-      </description>
-    </release>
-    <release version="46.0" date="2024-03-18" type="stable">
-      <description>
-        <p>This is the first stable release in the GNOME 46 series, with the
-        following improvements.</p>
-        <ul>
-          <li>Disable "secure-boot" for EFI virtual machines</li>
-          <li>Use libportal to call Background Portal</li>
-          <li>Fallback to default resources on error cases</li>
-          <li>Fix crash when processing a non bootable ISO image</li>
-          <li>Fix permissions when copying template files</li>
-          <li>Added/updated/fixed translations</li>
-        </ul>
-      </description>
-    </release>
-    <release version="45.0" date="2023-09-18"/>
-    <release version="43.1" date="2022-10-25"/>
+    <release version="49.rc" date="2025-08-29" type="development"/>
   </releases>
   <kudos>
     <kudo>AppMenu</kudo>
