@@ -1,6 +1,6 @@
 project ('gnome-boxes',
          ['vala', 'c'],
-         version: '49.alpha',
+         version: '49.rc',
          license: 'LGPLv2+',
          meson_version: '>= 0.59.0',
 )
