@@ -1,3 +1,12 @@
+49.rc - Aug 29, 2025
+====================
+
+Changes since 49.alpha
+
+  - Added/updated/fixed translations
+  - Default virtual machine storage disks to 30 GiB (from 20 Gib)
+  - Add vala 'CCode' attribute for null terminated string array
+
 48.0 - Mar 17, 2025
 ===================
 
